<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.exit.home.ExitFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/entrance_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_license_plate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">


            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/text_input_license_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_plate_input"
                android:gravity="center"
                android:hint="@string/hint_plate"
                android:inputType="textCapCharacters"
                android:text="asb-212"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:textSize="24sp"
                app:mask="###-####" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/payment_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/exit_payment_button_text"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_license_plate"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_license_plate"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_license_plate" />

        <Button
            android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:enabled="false"
            android:text="@string/exit_exit_button_text"
            app:layout_constraintEnd_toEndOf="@+id/payment_button"
            app:layout_constraintStart_toStartOf="@+id/payment_button"
            app:layout_constraintTop_toBottomOf="@+id/payment_button" />

        <Button
            android:id="@+id/historic_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:enabled="false"
            android:text="@string/exit_historic_button"
            app:layout_constraintEnd_toEndOf="@+id/exit_button"
            app:layout_constraintStart_toStartOf="@+id/exit_button"
            app:layout_constraintTop_toBottomOf="@+id/exit_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>