<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.historic.details.HistoricDetailsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_baseline_keyboard_backspace" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbarDetails"
        android:layout_margin="20dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/toolbarDetails"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/historic_plate"
            android:textAllCaps="true"
            android:textColor="@color/grey_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/plateDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="38sp"
            tools:text="ABC-1234" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/historic_status"
            android:textAllCaps="true"
            android:textColor="@color/grey_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/statusDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Estacionado" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/historic_current_time"
            android:textAllCaps="true"
            android:textColor="@color/grey_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/currentTimeDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="1h20 min" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/historic_payment"
            android:textAllCaps="true"
            android:textColor="@color/grey_text"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/paymentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            tools:text="Pago" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>