<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.entrance.EntranceFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:text="@string/entrance_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/text_input_layout_license_plate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <com.santalu.maskara.widget.MaskEditText
                android:id="@+id/text_input_license_plate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/background_plate_input"
                android:gravity="center"
                android:hint="@string/hint_plate"
                android:textColor="@color/black"
                android:textColorHint="@color/grey_text"
                android:textSize="24sp"
                app:mask="###-####" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="68dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="64dp"
            android:enabled="false"
            android:text="@string/entrance_button_text"
            app:layout_constraintEnd_toEndOf="@+id/text_input_layout_license_plate"
            app:layout_constraintStart_toStartOf="@+id/text_input_layout_license_plate"
            app:layout_constraintTop_toBottomOf="@+id/text_input_layout_license_plate" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/image_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_loading"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/entrance_title_loading"
        android:textColor="@color/color_primary"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/image_loading"
        app:layout_constraintStart_toStartOf="@+id/image_loading"
        app:layout_constraintTop_toBottomOf="@+id/image_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>